feat(endpoint): Set up User Profile setting
 - this allows a user to view and edit his/her profile details only.
   [delivers #167891580]
